# dune-copasi

./: CHANGELOG.md  CMakeLists.txt  README.md
.ci/: setup.sh  setup_dune  setup_static_deps
dune/: CMakeLists.txt
dune/copasi/common/: CMakeLists.txt  data_context.hh  tiff_grayscale.hh
dune/copasi/concepts/: CMakeLists.txt  grid.hh  multidomaingrid.hh  pdelab.hh
dune/copasi/finite_element/: CMakeLists.txt
dune/copasi/finite_element/dynamic_power/: CMakeLists.txt
dune/copasi/finite_element_map/: CMakeLists.txt
dune/copasi/grid/: CMakeLists.txt  multidomain_entity_transformation.hh
dune/copasi/local_operator/: CMakeLists.txt
dune/copasi/local_operator/diffusion_reaction/: CMakeLists.txt  base.hh  multidomain.hh
dune/copasi/model/: CMakeLists.txt  multidomain_diffusion_reaction.hh
dune/grid/concepts/: CMakeLists.txt  entity.hh  entityiterator.hh  geometry.hh  grid.hh  gridview.hh  indexset.hh  intersection.hh  intersectioniterator.hh
lib/: CMakeLists.txt
test/: CMakeLists.txt
